--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ passionate about building full-stack web applications using the
       Contact Me <i class="fa-regular fa-envelope"></i>
     </a>
     <a 
-    href="assets/resume/resume.pdf"
+    href="assets/resume/AppuKUMAR_Resume.pdf"
     download="resume.pdf"
     class="btn">
     Download My Resume <i class="fa-solid fa-file-arrow-down"></i>
