--- a/pages/project.html
+++ b/pages/project.html
@@ -16,7 +16,7 @@
                     <ul>
                         <li><a href="../index.html">Home</a></li>
                         <li><a href="project.html" class="active">Project</a></li>
-                        <li><a href="Skills.html">Skills</a></li>
+                        <li><a href="skills.html">Skills</a></li>
                         <li><a href="about.html">About</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
