add github project link

--- a/pages/project.html
+++ b/pages/project.html
@@ -43,7 +43,7 @@
             <p>Node.js, Express.js, MongoDB, Mongoose, JWT, Cloudinary</p>
 
             <div class="project-links">
-                <a href="https://github.com/appukumaryadav001" target="_blank">GitHub</a>
+                <a href="https://github.com/appukumaryadav001/playTube-Backend-MajorProject" target="_blank">GitHub</a>
             </div>
         </div>
 
